--- a/src/app/tour/tour-details/tour-details.component.html
+++ b/src/app/tour/tour-details/tour-details.component.html
@@ -1,14 +1,14 @@
 <div>
     <app-search></app-search>
     <div fxLayout="row" fxLayoutAlign="space-around start">
-        <mat-card fxFlex="65">
-            <mat-card-header>
-                <mat-card-title> {{selectedTour.name}} | {{selectedTour.price}} $ </mat-card-title>
-                <mat-card-subtitle>{{selectedTour.tourType}}</mat-card-subtitle>
-                <mat-card-subtitle>Rating: {{selectedTour.rating}} <mat-icon>star_rate</mat-icon>
-                </mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
+        <div fxFlex="65">
+            <div>
+                <div> {{selectedTour.name}} | {{selectedTour.price}} $ </div>
+                <div>{{selectedTour.tourType}}</div>
+                <div>Rating: {{selectedTour.rating}} <mat-icon>star_rate</mat-icon>
+                </div>
+            </div>
+            <div>
                 <img src="" alt="image">
                 <mat-accordion multi="true">
                     <mat-expansion-panel *ngFor="let place of selectedTour.journey ; let i = index">
@@ -20,10 +20,10 @@
                         </p>
                     </mat-expansion-panel>
                 </mat-accordion>
-            </mat-card-content>
-            <mat-card-actions>
+            </div>
+            <div>
                 <button mat-raised-button (click)="bookTour(selectedTour)">Book this tour</button>
-            </mat-card-actions>
+            </div>
             <div>
                 <div>
                     Tour price includes:
@@ -53,26 +53,26 @@
                 <p>...</p>
             </div>
     
-        </mat-card>
+        </div>
     
-        <mat-card fxFlex>
-            <mat-card-header>
-                <mat-card-title>
+        <div fxFlex>
+            <div>
+                <div>
                     Other tours
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <mat-card *ngFor="let tour of similarTours" class="margin-2">
-                    <mat-card-header>
-                        <mat-card-title class="pointer" (click)="viewTour(tour)">
+                </div>
+            </div>
+            <div>
+                <div *ngFor="let tour of similarTours" class="margin-2">
+                    <mat-card>
+                        <mat-card-header class="pointer" (click)="viewTour(tour)">
                             {{tour.name}}
-                        </mat-card-title>
-                        <mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-card-content>
                             {{tour.tourType }} | {{tour.rating}} <mat-icon>star_rate</mat-icon> | {{tour.price}} $
-                        </mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
-            </mat-card-content>
-        </mat-card>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
