--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -1,33 +1,33 @@
 <div fxLayout="column">
-  <h1>Filter by</h1>
+  <mat-card>Filter by</mat-card>
   <div class="container">
-    <div class="margin-5 padding-5">
+    <div class="margin-2 padding-2">
       <div>
         Tour type
       </div>
-      <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="type" (change)="filter()">
+      <mat-radio-group class="margin-2" fxLayout="column" [(ngModel)]="type" (change)="filter()">
         <mat-radio-button value="luxary">Luxary</mat-radio-button>
         <mat-radio-button value="economy">Economy </mat-radio-button>
         <mat-radio-button value="any">Any </mat-radio-button>
       </mat-radio-group>
     </div>
     
-    <div class="margin-5 padding-5">
+    <div class="margin-2 padding-2">
       <div>
         Tour price
       </div>
-      <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="priceRange" (change)="filter()">
+      <mat-radio-group class="margin-2" fxLayout="column" [(ngModel)]="priceRange" (change)="filter()">
         <mat-radio-button value="under100">Under 100$</mat-radio-button>
         <mat-radio-button value="over100">Over 100$ </mat-radio-button>
         <mat-radio-button value="any">Any </mat-radio-button>
       </mat-radio-group>
     </div>
     
-    <div class="margin-5 padding-5">
+    <div class="margin-2 padding-2">
       <div>
         Number of days
       </div>
-      <mat-radio-group fxLayout="column" class="margin-5" [(ngModel)]="daysNumber" (change)="filter()">
+      <mat-radio-group fxLayout="column" class="margin-2" [(ngModel)]="daysNumber" (change)="filter()">
         <mat-radio-button value="1to3" >1 - 3 days</mat-radio-button>
         <mat-radio-button value="from4" >4+ days</mat-radio-button>
         <mat-radio-button value="any" >Any</mat-radio-button>
