--- a/src/app/tour/tour.component.css
+++ b/src/app/tour/tour.component.css
@@ -1,15 +1,19 @@
-mat-card{
+mat-card {
     margin: 2%;
 }
 
-.pointer{
+.pointer {
     cursor: pointer;
 }
 
-.search-bar{
+.search-bar {
     margin-bottom: 5%;
 }
 
-.container{
+.container {
     background-image: linear-gradient(to right, rgb(82, 196, 235), rgb(243, 236, 236));
+}
+
+.no-margin {
+     margin: 0%;
 }
