--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -1,6 +1,6 @@
-<div fxLayout="column">
-  <mat-card>Filter by</mat-card>
-  <div class="container">
+<div fxLayout="column" class="filter-bar">
+  <mat-card class="filter-area">Filter by</mat-card>
+  <mat-card class="filter-area">
     <div class="margin-2 padding-2">
       <div>
         Tour type
@@ -33,5 +33,5 @@
         <mat-radio-button value="any" >Any</mat-radio-button>
       </mat-radio-group>
     </div>
-  </div>
+  </mat-card>
 </div>
