--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,22 +1,25 @@
-<form fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
-    <mat-form-field floatLabel="always" appearance="fill">
-        <mat-select placeholder="from where?" [(ngModel)]="from" name="fromPlace">
+<form fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign="center">
+    <mat-form-field appearance="fill">
+        <mat-label>from where?</mat-label>
+        <mat-select [(ngModel)]="from" name="fromPlace">
             <mat-option *ngFor="let fromPlace of fromWhere" [value]="fromPlace.value">
                 {{fromPlace.viewValue}}
             </mat-option>
         </mat-select>
     </mat-form-field>
 
-    <mat-form-field floatLabel="always" appearance="fill">
-        <mat-select placeholder="to where?" [(ngModel)]="to" name="toPlace">
+    <mat-form-field appearance="fill" >
+        <mat-label>to where?</mat-label>
+        <mat-select [(ngModel)]="to" name="toPlace">
             <mat-option *ngFor="let toPlace of toWhere" [value]="toPlace.value">
                 {{toPlace.viewValue}}
             </mat-option>
         </mat-select>
     </mat-form-field>
 
-    <mat-form-field floatLabel="always" appearance="fill">
-        <input matInput [matDatepicker]="datepicker" placeholder="choose your date" [(ngModel)]="date" name="ofDate">
+    <mat-form-field appearance="fill">
+        <mat-label>choose your date</mat-label>
+        <input matInput [matDatepicker]="datepicker" [(ngModel)]="date" name="ofDate">
         <mat-datepicker-toggle matPrefix [for]="datepicker"></mat-datepicker-toggle>
         <mat-datepicker #datepicker></mat-datepicker>
         <button mat-button matSuffix mat-icon-button fxHide.lt-md="true">
@@ -27,5 +30,6 @@
     <button mat-button fxHide.gt-sm="true" (click)="searchTour(from, to, date)">
         Search
     </button>
+
 
 </form>
