--- a/src/app/tour/tour-details/tour-details.component.css
+++ b/src/app/tour/tour-details/tour-details.component.css
@@ -2,12 +2,21 @@
     margin: 2%;
 }
 
-
-.pointer{
+.pointer {
     cursor: pointer;
 }
 
-img{
+img {
     width: 200px;
     height: 200px;
+}
+
+.search-bar {
+    margin-bottom: 3%;
+}
+
+.container {
+    background-image: linear-gradient(to right, rgb(82, 196, 235), rgb(243, 236, 236));
+    height: 100%;
+    padding-top: 3%;
 }
