--- a/src/app/tour/tour-details/tour-details.component.css
+++ b/src/app/tour/tour-details/tour-details.component.css
@@ -15,8 +15,17 @@ img {
     margin-bottom: 3%;
 }
 
+.margin-bottom-2 {
+    margin-bottom: 2%;
+}
+
+.margin-top-2 {
+    margin-top: 2%;
+}
+
 .container {
-    background-image: linear-gradient(to right, rgb(82, 196, 235), rgb(243, 236, 236));
+    background-image: linear-gradient(to right, rgb(128, 209, 236), rgb(243, 236, 236));
     height: 100%;
     padding-top: 3%;
+    padding-left: 1%;
 }
