--- a/src/app/shared/filter/filter.component.css
+++ b/src/app/shared/filter/filter.component.css
@@ -11,7 +11,7 @@
 }
 
 .filter-area {
-    background-image: linear-gradient(to bottom, rgb(174, 223, 253), rgb(167, 177, 185));
+    /* background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255)); */
     margin-bottom: 6%;
 }
 
