--- a/src/app/core/common-places/common-places.component.css
+++ b/src/app/core/common-places/common-places.component.css
@@ -15,9 +15,13 @@
     /* background: url(./../../assets/cover.jpeg); */
     /* background-size: cover; */
     min-height: 100%; /*full height image => with fxFlex*/
-    background-image: linear-gradient(to right, rgb(82, 196, 235), rgb(243, 236, 236));
+    background-image: linear-gradient(to right, rgb(137, 241, 224), rgb(188, 248, 225));
 }
 
 .pointer{
     cursor: pointer;
+}
+
+.common-place{
+    height: 4em;
 }
