--- a/src/app/core/common-places/common-places.component.html
+++ b/src/app/core/common-places/common-places.component.html
@@ -8,7 +8,7 @@
 
     <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" class="margin-2 transparent-80">
         <mat-card [routerLink]="['/tour', place]" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let place of commonPlaces"
-            class="margin-1 pointer">
+            class="margin-1 pointer common-place">
                 {{place}}
         </mat-card>
     </div>
