--- a/src/app/tour/tour-details/tour-details.component.css
+++ b/src/app/tour/tour-details/tour-details.component.css
@@ -24,8 +24,12 @@ img {
 }
 
 .container {
-    background-image: linear-gradient(to right, rgb(144, 208, 230), rgb(243, 236, 236));
+    /* background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255)); */
     height: 100%;
     padding-top: 3%;
     padding-left: 1%;
 }
+
+/* .tour-info {
+    background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255));
+} */
