--- a/src/app/tour/tour.component.css
+++ b/src/app/tour/tour.component.css
@@ -1,6 +1,6 @@
 mat-card {
     margin: 0% 2% 2% 2%;
-    background-image: linear-gradient(to right, rgb(211, 240, 250), rgb(247, 241, 241));
+    /* background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255)); */
 }
 
 .pointer {
@@ -12,7 +12,7 @@ mat-card {
 }
 
 .container {
-    background-image: linear-gradient(to right, rgb(212, 229, 235), rgb(255, 255, 255));
+    /* background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255)); */
     height: 100%;
     padding-top: 3%;
 }
