--- a/src/app/core/common-places/common-places.component.css
+++ b/src/app/core/common-places/common-places.component.css
@@ -15,7 +15,8 @@
     /* background: url(./../../assets/cover.jpeg); */
     /* background-size: cover; */
     min-height: 100%; /*full height image => with fxFlex*/
-    background-image: linear-gradient(to right, rgb(137, 241, 224), rgb(188, 248, 225));
+    background-image: linear-gradient(to right, rgb(255, 185, 50), rgb(252, 212, 158));
+    /* background-color: rgb(250, 186, 66); */
 }
 
 .pointer{
