--- a/src/app/user/auth/signin/signin.component.html
+++ b/src/app/user/auth/signin/signin.component.html
@@ -1,7 +1,9 @@
-<form fxLayout="column" fxLayoutAlign="center center" class="signin" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-  <mat-card fxLayout="column" fxLayoutAlign="center center">
-    <h1>Letsgo123</h1>
+<form fxLayout="column" fxLayoutAlign="center center"  [formGroup]="signinForm" (ngSubmit)="onSubmit()" class="signin-form">
+
+  <mat-card fxLayout="column" fxLayoutAlign="center center" class="signin">
+    <a routerLink="/">Letsgo123</a>
     <h2>Signin</h2>
+
     <mat-form-field>
       <input matInput type="text" placeholder="Email" formControlName="email">
       <mat-icon matSuffix>email</mat-icon>
@@ -11,7 +13,11 @@
       <input matInput type="text" placeholder="Password" formControlName="password">
       <mat-icon matSuffix>visibility</mat-icon>
     </mat-form-field>
+
     <button mat-raised-button type="submit">Sign in</button>
-    <button mat-button routerLink="/signup">Sign up instead</button>
+    <a routerLink="/signup">Sign up instead</a>
   </mat-card>
+
+  <a routerLink="" >Forgot password</a>
+
 </form>
