--- a/src/app/shared/search/search.component.css
+++ b/src/app/shared/search/search.component.css
@@ -2,3 +2,7 @@ mat-form-field .mat-form-field-wrapper .mat-form-field-flex {
     border-radius: 0%;
     background-color: rgba(255, 255, 255, 0.8)
 }
+
+div.mat-form-field-flex {
+    height: 60px;
+}
