--- a/src/app/core/popular-places/popular-places.component.html
+++ b/src/app/core/popular-places/popular-places.component.html
@@ -7,7 +7,7 @@
     </h1>
 
     <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" class="margin-2 transparent-80">
-        <mat-card [routerLink]="['/tour', place]" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let place of commonPlaces"
+        <mat-card [routerLink]="['/tour', place]" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let place of popularPlaces"
             class="margin-1 pointer common-place">
                 {{place}}
         </mat-card>
