--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -22,6 +22,7 @@
           <mat-card-content>
             <p> {{tour.rating}} stars </p>
             <p> {{tour.price}} $ </p>
+            <p> Discount -{{tour.discount}}% </p>
           </mat-card-content>
         </mat-card-header>
         <img src="" alt="Photo of tour {{tour.name}}">
