--- a/src/app/core/popular-places/popular-places.component.css
+++ b/src/app/core/popular-places/popular-places.component.css
@@ -26,3 +26,7 @@
 .common-place{
     height: 4em;
 }
+
+.hightlight:hover {
+    background-image: linear-gradient(to right, rgb(235, 212, 165), rgb(245, 229, 208));
+}
