--- a/src/app/core/popular-places/popular-places.component.css
+++ b/src/app/core/popular-places/popular-places.component.css
@@ -27,6 +27,26 @@
     height: 4em;
 }
 
-.hightlight:hover {
+/* .hightlight:hover {
     background-image: linear-gradient(to right, rgb(235, 212, 165), rgb(245, 229, 208));
+} */
+
+.pulse:hover {
+    background-image: linear-gradient(to right, rgb(235, 212, 165), rgb(245, 229, 208));
+    -webkit-animation: pulse 1s; /* Safari 4.0 - 8.0 */
+    animation: pulse 1s;
+}
+  
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes pulse {
+    from {transform: scale(1, 1)}
+    50% {transform: scale(1.3, 1.3)}
+    to {transform: scale(1, 1)}
+}
+  
+/* Standard syntax */
+@keyframes pulse {
+    from {transform: scale(1, 1)}
+    50% {transform: scale(1.3, 1.3)}
+    to {transform: scale(1, 1)}
 }
