--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -18,14 +18,14 @@
       <mat-card *ngFor="let tour of (toursToShow$ | async)">
         <mat-card-header>
           <mat-card-title [routerLink]="['/tour-details', tour._id]" class="pointer">{{tour.name}} </mat-card-title>
-          <mat-card-subtitle>Available seats: </mat-card-subtitle>
+          <mat-card-subtitle>Available seats: {{tour.availableSeats}}  </mat-card-subtitle>
           <mat-card-content>
             <p> {{tour.rating}} stars </p>
             <p> {{tour.price}} $ </p>
             <p> Discount -{{tour.discount}}% </p>
           </mat-card-content>
         </mat-card-header>
-        <img src="" alt="Photo of tour {{tour.name}}">
+        <img src="{{tour.image}}" alt="Photo of tour {{tour.name}}">
         <mat-card-content>
           Review
         </mat-card-content>
@@ -34,11 +34,10 @@
           <button mat-button (click)="bookTour(tour)"> Book Tour {{tour.name}} </button>
         </mat-card-actions>
       </mat-card>
-      
+      <!-- <button mat-button (click)="addTour()">Create Tour</button> -->
       <button *ngIf="onLoadMoreTour" mat-button (click)="loadMoreTours()">Load more tours</button>
 
     </div>
   </div>
 </div>
 
-<!-- <button mat-button (click)="addTour()">Create Tour</button> -->
