update tour  page

--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -25,7 +25,7 @@
             <p> Discount -{{tour.discount}}% </p>
           </mat-card-content>
         </mat-card-header>
-        <img src="{{tour.image}}" alt="Photo of tour {{tour.name}}">
+        <img src="{{tour.imageUrl}}" alt="Photo of tour {{tour.name}}">
         <mat-card-content>
           Review
         </mat-card-content>
