--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,3 +15,9 @@
 mat-sidenav-container{
     height: 100vh;
 }
+
+mat-toolbar {
+    background-color: rgb(236, 146, 7);
+    color: rgb(255, 255, 255);
+    padding: 3% 0%;
+}
