--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,5 +1,10 @@
-mat-toolbar {
+.header {
     padding: 0.5%;
     background-color: rgb(236, 146, 7);
     color: rgb(255, 255, 255);
+}
+
+.margin-1 {
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
