--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container hasBackdrop="true">
-    <mat-sidenav #sidenav mode="push">
-        <app-header fxHide.gt-sm="true"></app-header>
+    <mat-sidenav #sidenav [(opened)]="sideNavOpen" mode="push">
+        <app-header (openedSideNav)="onOpenedSideNav($event)" fxHide.gt-sm="true"></app-header>
     </mat-sidenav>
 
     <mat-sidenav-content fxLayout="column" fxLayoutAlign="space-between none">
