--- a/src/app/shared/search/search.component.css
+++ b/src/app/shared/search/search.component.css
@@ -6,3 +6,8 @@ mat-form-field .mat-form-field-wrapper .mat-form-field-flex {
 div.mat-form-field-flex {
     height: 60px;
 }
+
+.margin-1 {
+    margin-left: 1%;
+    margin-right: 1%;
+}
