update mobile layout

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
     <!-- for big screen -->
     <mat-toolbar class="header" fxLayout="row" fxHide.lt-md="true" fxLayoutAlign="space-between center">
       <nav fxLayout="row" fxLayoutAlign="start center">
-          <button mat-button routerLink="/"> letsgo123.xyz </button>
+          <button mat-button routerLink="/" class="title"> letsgo123.xyz </button>
           <button mat-button routerLink="/tour/all"> Explore </button>
           <button mat-button routerLink="/tour/discount"> Today's deal </button>
       </nav>
