--- a/src/app/user/auth/signin/signin.component.html
+++ b/src/app/user/auth/signin/signin.component.html
@@ -1,7 +1,7 @@
 <form fxLayout="column" fxLayoutAlign="center center"  [formGroup]="signinForm" (ngSubmit)="onSubmit()" class="signin-form">
 
   <mat-card fxLayout="column" fxLayoutAlign="center center" class="signin">
-    <a routerLink="/">Letsgo123</a>
+    <a routerLink="/"  class="title">Letsgo123</a>
     <h2>Signin</h2>
 
     <mat-form-field>
