--- a/src/app/user/auth/signup/signup.component.html
+++ b/src/app/user/auth/signup/signup.component.html
@@ -1,8 +1,8 @@
 <form fxLayout="column" fxLayoutAlign="center center" [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="signup-form">
  
   <mat-card fxLayout="column" fxLayoutAlign="center center" class="signup" >
-    <a routerLink="/">Letsgo123</a>
-    <h2>Create your account</h2>
+    <a routerLink="/"  class="title">Letsgo123</a>
+    <h2> Create your account</h2>
 
     <mat-form-field>
       <input matInput type="text" placeholder="Username" formControlName="username">
