--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,16 +1,18 @@
 <div fxLayout="row" fxLayoutAlign="space-around none" class="footer">
   <div fxLayout="column">
-      <div>Contact us</div>
+      <div class="subtitle">Help</div>
+      <div >Contact us</div>
       <div>FAQs</div>
       <div>Terms of use</div>
   </div>
   <div fxLayout="column">
-      <div>About us</div>
+      <div class="subtitle">About us</div>
       <div>Blog</div>
-      <div>Terms of use</div>
+      <div>Press</div>
   </div>
   <div fxLayout="column">
-      <div>Partner with us</div>
-      <div>Career</div>
+      <div class="subtitle">Get the app</div>
+      <div>iOS app</div>
+      <div>Android app</div>
   </div>
 </div>
