--- a/src/app/core/popular-places/popular-places.component.html
+++ b/src/app/core/popular-places/popular-places.component.html
@@ -2,8 +2,8 @@
 
     <app-search></app-search>
 
-    <h1 fxLayoutAlign="center" routerLink="/tour/all" class="pointer" fxHide.lt-md="true">
-        Explore most popular destinations now !
+    <h1 fxLayoutAlign="center center" routerLink="/tour/all" class="intro">
+        Explore most popular destinations
     </h1>
 
     <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" class="margin-2 transparent-80">
