--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" class="filter-bar">
-  <mat-card class="filter-area">Filter by</mat-card>
+  <mat-card class="filter-area title">Filter by</mat-card>
   <mat-card class="filter-area">
     <div class="margin-2 padding-2">
       <div> Tour type </div>
