--- a/src/app/user/auth/signin/signin.component.css
+++ b/src/app/user/auth/signin/signin.component.css
@@ -1,15 +1,11 @@
 .signin {
     padding: 5%;
-    /* background-image: linear-gradient(to bottom, rgb(255, 230, 119), rgb(255, 246, 219)); */
+    background-image: linear-gradient(to bottom, rgb(255, 230, 119), rgb(255, 246, 219));
 }
 
 .signin-form {
     height: 100%;
     background-image: linear-gradient(to bottom, rgb(235, 203, 100), rgb(223, 214, 185));
-}
-
-div.mat-form-field-flex {
-    height: auto;
 }
 
 .title {
