--- a/src/app/user/auth/signup/signup.component.css
+++ b/src/app/user/auth/signup/signup.component.css
@@ -5,7 +5,7 @@
 
 .signup-form {
     height: 100%;
-    /* background-image: linear-gradient(to bottom, rgb(235, 203, 100), rgb(223, 214, 185)); */
+    background-image: linear-gradient(to bottom, rgb(235, 203, 100), rgb(223, 214, 185));
 }
 
 .title {
