--- a/src/app/user/auth/signin/signin.component.html
+++ b/src/app/user/auth/signin/signin.component.html
@@ -18,6 +18,6 @@
     <a routerLink="/signup">Sign up instead</a>
   </mat-card>
 
-  <a routerLink="" >Forgot password</a>
+  <a routerLink="." >Forgot password</a>
 
 </form>
