--- a/src/app/user/auth/signup/signup.component.html
+++ b/src/app/user/auth/signup/signup.component.html
@@ -23,5 +23,5 @@
     <a routerLink="/signin">Sign in instead</a>
   </mat-card>
 
-  <a routerLink="" >Forgot password</a>
+  <a routerLink="." >Forgot password</a>
 </form>
