--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -1,4 +1,5 @@
-<div fxLayout="column" class="filter-bar">
+<!-- for big screen -->
+<div fxLayout="column" class="filter-bar" fxHide.lt-md="true">
   <mat-card class="filter-area title">Filter by</mat-card>
   <mat-card class="filter-area">
     <div class="margin-2 padding-2">
@@ -28,4 +29,46 @@
       </mat-radio-group>
     </div>
   </mat-card>
+</div>
+
+<!-- for small screen -->
+<div fxHide.gt-sm="true" class="margin-2">
+  <mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Filter by
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+  
+      <mat-card >
+        <div class="margin-2 padding-2">
+          <div> Tour type </div>
+          <mat-radio-group  fxLayout="column" [(ngModel)]="type" (change)="filter()">
+            <mat-radio-button value="luxary">Luxary</mat-radio-button>
+            <mat-radio-button value="economy">Economy </mat-radio-button>
+            <mat-radio-button value="any">Any </mat-radio-button>
+          </mat-radio-group>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="margin-2 padding-2">
+          <div> Tour price </div>
+          <mat-radio-group  fxLayout="column" [(ngModel)]="priceRange" (change)="filter()">
+            <mat-radio-button value="under100">Under 100$</mat-radio-button>
+            <mat-radio-button value="over100">Over 100$ </mat-radio-button>
+            <mat-radio-button value="any">Any </mat-radio-button>
+          </mat-radio-group>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="margin-2 padding-2">
+          <div> Number of days </div>
+          <mat-radio-group fxLayout="column" [(ngModel)]="daysNumber" (change)="filter()">
+            <mat-radio-button value="1to3">1 - 3 days</mat-radio-button>
+            <mat-radio-button value="from4">4+ days</mat-radio-button>
+            <mat-radio-button value="any">Any</mat-radio-button>
+          </mat-radio-group>
+        </div>
+      </mat-card>
+    </mat-expansion-panel>
+  </mat-accordion>
 </div>
