--- a/src/app/tour/tour.component.css
+++ b/src/app/tour/tour.component.css
@@ -13,7 +13,7 @@ mat-card {
 
 .container {
     /* background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255)); */
-    height: 100%;
+    /* height: 100%; */
     padding-top: 3%;
 }
 
