--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -3,7 +3,8 @@
     <app-search></app-search>
   </div>
 
-  <div fxLayout="row">
+  <!-- For big screen  -->
+  <div fxLayout.gt-sm="row" fxHide.lt-md="true">
     <div fxFlex="25">
       <app-filter></app-filter>
     </div>
@@ -18,7 +19,7 @@
       <mat-card *ngFor="let tour of (toursToShow$ | async)">
         <mat-card-header>
           <mat-card-title [routerLink]="['/tour-details', tour._id]" class="tour-name">{{tour.name}} </mat-card-title>
-          <mat-card-subtitle>Available seats: {{tour.availableSeats}}  </mat-card-subtitle>
+          <mat-card-subtitle>Available seats: {{tour.availableSeats}} </mat-card-subtitle>
           <mat-card-content>
             <p> {{tour.rating}} stars </p>
             <p> {{tour.price}} $ </p>
@@ -39,5 +40,38 @@
 
     </div>
   </div>
-</div>
 
+  <!-- For small screen  -->
+  <div fxLayout.lt-md="column" fxHide.gt-sm="true">
+    <div>
+      <app-filter></app-filter>
+    </div>
+
+    <mat-card class="title">
+      {{title}}
+    </mat-card>
+
+    <mat-card *ngFor="let tour of (toursToShow$ | async)">
+      <mat-card-header>
+        <mat-card-title [routerLink]="['/tour-details', tour._id]" class="tour-name">{{tour.name}} </mat-card-title>
+        <mat-card-subtitle>Available seats: {{tour.availableSeats}} </mat-card-subtitle>
+        <mat-card-content>
+          <p> {{tour.rating}} stars </p>
+          <p> {{tour.price}} $ </p>
+          <p> Discount -{{tour.discount}}% </p>
+        </mat-card-content>
+      </mat-card-header>
+      <img src="{{tour.imageUrl}}" alt="Photo of tour {{tour.name}}">
+      <mat-card-content>
+        Review
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [routerLink]="['/tour-details', tour._id]"> More info </button>
+        <button mat-button (click)="bookTour(tour)"> Book Tour {{tour.name}} </button>
+      </mat-card-actions>
+    </mat-card>
+    <!-- <button mat-button (click)="addTour()">Create Tour</button> -->
+    <button *ngIf="onLoadMoreTour" mat-button (click)="loadMoreTours()">Load more tours</button>
+
+  </div>
+</div>
